--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <section id="hero">
         <div class="hero-content">
-            <h2>Bold Faith. Bold Style.</h2>
+            <h2>Having Character and Showing Love</h2>
             <p>Stand out with apparel that represents your unwavering faith.</p>
             <a href="#products" class="btn">Shop Now</a>
         </div>
