--- a/index.html
+++ b/index.html
@@ -8,14 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 }
-<body> {
-font-family: 'Roboto', sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f9; /* Light background */
-    color: #333; /* Text color */
-    line-height: 1.6;
-}
+<body> 
     <header> 
         <div class="container">
             <h1 class="logo">Revolutionary Youth</h1>
@@ -105,4 +98,3 @@ font-family: 'Roboto', sans-serif;
     </footer>
 </body>
 </html>
-theme: jekyll-theme-minimal
